--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,10 +9,13 @@
   --green-clr: #1dbfa3;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   overflow-x: hidden;
   font-family: "Encode Sans", sans-serif;
-  box-sizing: border-box;
 }
 
 .container {
@@ -21,11 +24,19 @@ body {
 }
 
 .section {
-  padding: 3rem 0 5rem;
+  padding: 2rem 0 5rem;
 }
 
 a {
   text-decoration: none;
+}
+
+.btn {
+  appearance: none;
+  border: none;
+  background-color: transparent;
+  outline: none;
+  cursor: pointer;
 }
 
 header {
@@ -39,6 +50,10 @@ nav {
   align-items: center;
   justify-content: space-between;
   padding: 1.5rem 2rem;
+}
+
+img {
+  width: 100%;
 }
 
 .logo img {
@@ -199,8 +214,11 @@ nav {
   margin-top: 1rem;
 }
 
-.about__section-container {
-  padding-inline: 10px;
+.about__section-container,
+.template__container {
+  /* width: 90%; */
+  padding-inline: 1.5rem;
+  margin: 0 auto;
 }
 
 .bg-img-5 {
@@ -210,20 +228,23 @@ nav {
   height: 9.85275rem;
 }
 
-.section-title {
-  font-size: 1.75rem;
+.section__title {
+  font-size: 2.2rem;
   font-weight: 700;
-  margin-bottom: 1rem;
+  margin-block: 1.8rem 1rem;
+  text-align: center;
 }
 
 .about__section-text,
-.about__section-subtitle {
-  width: 20rem;
+.about__section-subtitle,
+.template__section-subtitle {
+  /* width: 90%; */
   margin: 0 auto;
+  text-align: center;
 }
 
 .about__section-subtitle {
-  font-size: 1.25rem;
+  font-size: 1.5rem;
   font-weight: 700;
   line-height: 200%;
 }
@@ -234,10 +255,12 @@ nav {
 }
 
 .about__section-text {
-  font-size: 1.125rem;
-  font-weight: 400;
-  line-height: 1.6875rem;
-  margin-block: 1rem 2.5rem;
+  font-size: 1.36rem;
+  font-weight: 300;
+  line-height: 150%;
+  margin-block: 1rem 3rem;
+  word-spacing: 2px;
+  letter-spacing: 1px;
 }
 
 .about__section-cta-btn {
@@ -246,5 +269,133 @@ nav {
   font-weight: 600;
   font-size: 1rem;
   letter-spacing: 0;
-  margin-top: 20px;
+}
+
+.services__cards {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-bottom: 3rem;
+}
+
+.services__card {
+  width: 100%;
+  padding-top: .2rem;
+  margin-block: 10px 20px;
+  display: flex;
+  flex-direction: column;
+  background-color: var(--white-clr);
+  align-items: center;
+  box-shadow: 2.384px 2.384px 14.902px 0px rgba(0, 0, 0, 0.25);
+  border-radius: 8px;
+  overflow-y: hidden;
+}
+
+.services__card-title {
+  font-size: 2rem;
+  font-weight: 700;
+  line-height: 200%;
+  margin-bottom: 5px;
+}
+
+.services__card-img {
+  width: 90%;
+  object-fit: contain;
+  margin-bottom: -50px;
+}
+
+.template__section-subtitle {
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-bottom: 2.2rem;
+}
+
+.btn__catalog {
+  display: flex;
+  gap: 30px;
+  flex-wrap: wrap;
+  width: 100%;
+  margin: 5px auto 2rem;
+}
+
+.template__btn {
+  width: 200px;
+  border: 1px solid var(--gray-clr);
+  border-radius: 8px;
+  padding: 10px 15px;
+  font-weight: 700;
+  font-size: 1.2rem;
+}
+
+.templates__cards {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 1rem;
+}
+
+.templates__card {
+  background-color: #eaf0ef;
+  border-radius: 8px;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+  box-shadow: 2.384px 2.384px 14.902px 0px rgba(0, 0, 0, 0.25);
+}
+
+.card__img {
+  object-fit: contain;
+}
+
+.template__info {
+  padding: 5px 3.2rem;
+}
+
+.template__info h5 {
+  font-size: 1.2rem;
+  margin-block: 10px 15px;
+  font-weight: 600;
+  text-align: center;
+}
+
+.template__info .btns__group {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.template__info .btn {
+  /* border: 1px solid green; */
+  padding: 8px 13px;
+  border-radius: 5px;
+  font-size: 15px;
+  font-weight: 600;
+}
+
+.price__btn {
+  color: var(--white-clr);
+  background-color: var(--orange-clr);
+}
+
+.action__btns {
+  display: flex;
+  gap: 10px;
+}
+
+.buy__btn {
+  background-color: var(--black-clr);
+  color: var(--white-clr);
+}
+
+.action__btns .preview__btn {
+  padding-inline: 20px;
+  color: var(--black-clr);
+  background-color: var(--white-clr);
+  border: 1px solid var(--orange-clr);
+}
+
+.view__templates-btn {
+  width: 100%;
+  background-color: var(--orange-clr);
+  margin: 0 auto;
 }
