--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -31,6 +31,10 @@ a {
   text-decoration: none;
 }
 
+ul {
+  list-style-type: none;
+}
+
 .btn {
   appearance: none;
   border: none;
@@ -45,7 +49,7 @@ header {
   position: relative;
 }
 
-nav {
+header nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -63,7 +67,11 @@ img {
 
 .nav__menu {
   display: flex;
-  list-style: none;
+  transition: all .5s;
+}
+
+.close__btn {
+  display: none;
 }
 
 @media screen and (max-width: 750px) {
@@ -84,16 +92,46 @@ img {
   }
 
   .close__btn {
+    display: block;
     position: absolute;
     top: 1rem;
     right: 1rem;
-    font-size: 1.5rem;
+    font-size: 2rem;
     cursor: pointer;
     transition: all .5s;
   }
+
+  .close__btn:hover {
+    color: red;
+  }
+}
+
+.nav__open {
+  right: 0;
 }
 
 /** Nav Items and Links */
+.nav__item {
+  margin-bottom: 20px;
+  font-size: 20px;
+}
+
+.nav__link {
+  color: var(--black-clr);
+  font-weight: 600;
+  text-transform: capitalize;
+  position: relative;
+}
+
+.nav__link:hover::after {
+  content: "";
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background-color: var(--black-clr);
+}
 
 /** Nav Icons */
 .nav__icons {
@@ -215,8 +253,8 @@ img {
 }
 
 .about__section-container,
-.template__container {
-  /* width: 90%; */
+.template__container,
+.footer__container {
   padding-inline: 1.5rem;
   margin: 0 auto;
 }
@@ -238,7 +276,6 @@ img {
 .about__section-text,
 .about__section-subtitle,
 .template__section-subtitle {
-  /* width: 90%; */
   margin: 0 auto;
   text-align: center;
 }
@@ -332,7 +369,7 @@ img {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  margin-bottom: 1rem;
+  margin-bottom: 1.2rem;
 }
 
 .templates__card {
@@ -365,7 +402,6 @@ img {
 }
 
 .template__info .btn {
-  /* border: 1px solid green; */
   padding: 8px 13px;
   border-radius: 5px;
   font-size: 15px;
@@ -394,8 +430,101 @@ img {
   border: 1px solid var(--orange-clr);
 }
 
+.view__all {
+  display: grid;
+  place-content: center;
+}
+
 .view__templates-btn {
-  width: 100%;
   background-color: var(--orange-clr);
-  margin: 0 auto;
+  color: var(--white-clr);
+  padding: 2rem 4rem;
+  font-size: 20px;
+  font-weight: 600;
+  border-radius: 8px;
+  box-shadow: 2.384px 2.384px 14.902px 0px rgba(0, 0, 0, 0.25);
+}
+
+footer {
+  background-color: var(--black-clr);
+  padding-block: 4rem 3rem;
+}
+
+.footer__container {
+  display: grid;
+  row-gap: 1rem;
+  grid-template-areas: 'footerNav'
+                       'faq'
+                       'termsPrivacy'
+                       'socials'
+                       'logo'
+                       'hr';
+  color: var(--gray-clr);
+  text-align: center;
+}
+
+.footer__container .logo {
+  grid-area: logo;
+}
+
+.footer__container .logo img {
+  width: 7rem;
+  height: 7rem;
+}
+
+.terms__privacy {
+  grid-area: termsPrivacy;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 35px;
+}
+
+.faq {
+  grid-area: faq;
+  margin-bottom: 15px;
+}
+
+.footer__nav {
+  grid-area: footerNav;
+  margin-bottom: 65px;
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
+}
+
+.social__icons {
+  grid-area: socials;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 35px;
+  margin-block: 65px;
+}
+
+.social__icons a {
+  color: var(--gray-clr);
+  font-size: 25px;
+}
+
+.footer__container hr {
+  grid-area: hr;
+  width: 100%;
+  background-color: var(--gray-clr);
+  height: 2px;
+  opacity: .6;
+  border: none;
+  margin-bottom: -2px;
+}
+
+.faq,
+.footer__nav a,
+.terms__privacy a {
+  color: var(--white-clr);
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.footer__container p {
+  font-size: 18px;
 }
