--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,7 +24,8 @@ body {
 }
 
 .section {
-  padding: 2rem 0 5rem;
+  /* width: 100%; */
+  padding: 2rem 0 3rem;
 }
 
 a {
@@ -45,7 +46,10 @@ ul {
 
 header {
   background-color: var(--white-clr);
-  padding-bottom: 5rem;
+  position: relative;
+}
+
+.header__container {
   position: relative;
 }
 
@@ -53,7 +57,7 @@ header nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1.5rem 2rem;
+  padding: 1.5rem 2rem .4rem;
 }
 
 img {
@@ -70,49 +74,35 @@ img {
   transition: all .5s;
 }
 
-.close__btn,
 .nav__icons .bx-menu {
   display: none;
 }
 
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 900px) {
   .nav__menu {
     flex-direction: column;
+    align-items: center;
     gap: 10px;
-    padding-top: 4rem;
-    width: 50%;
-    height: 60vh;
+    width: 100%;
+    height: 0;
     background: var(--white-clr);
     color: var(--black-clr);
     position: absolute;
-    right: -1000px;
-    top: 0;
+    left: 0;
+    top: 90px;
     border-radius: 0.3125rem 0 0 0.3125rem;
-    box-shadow: 2.384px 2.384px 14.902px 0px rgba(0, 0, 0, 0.25);
     z-index: 1000;
+    opacity: 0;
   }
-
-  .close__btn {
-    display: block;
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-    font-size: 2rem;
-    cursor: pointer;
-    transition: all .5s;
-  }
-
-  .close__btn:hover {
-    color: red;
-  }
-
   .nav__icons .bx-menu {
     display: block;
   }
 }
 
 .nav__open {
-  right: 0;
+  padding-top: 4rem;
+  height: 300px;
+  opacity: 1;
 }
 
 /** Nav Items and Links */
@@ -124,7 +114,7 @@ img {
 .nav__link {
   color: var(--black-clr);
   font-weight: 600;
-  text-transform: capitalize;
+  text-transform: uppercase;
   position: relative;
 }
 
@@ -134,7 +124,7 @@ img {
   bottom: -2px;
   left: 0;
   width: 100%;
-  height: 3px;
+  height: 2px;
   background-color: var(--black-clr);
 }
 
@@ -142,7 +132,7 @@ img {
 .nav__icons {
   display:flex;
   align-items: center;
-  gap: 10px;
+  gap: 30px;
 }
 
 .nav__icons .product__cart {
@@ -193,7 +183,7 @@ img {
   font-weight: 700;
 }
 
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 900px) {
   .hero__section .btn__text {
     display: flex;
     flex-direction: column-reverse;
@@ -201,13 +191,16 @@ img {
   }
 
   .bg-img-3,
-  .bg-img-4 {
+  .bg-img-4,
+  .first,
+  .second {
     display: none;
   }
 }
 
 .hero__section .btn__text .cta-btn,
 .about__section-cta-btn {
+  display: inline-block;
   background-color: var(--green-clr);
   color: var(--white-clr);
   padding: 1.3rem 3rem;
@@ -230,21 +223,25 @@ img {
 
 .bg-img-1,
 .bg-img-2,
+.bg-img-3,
+.bg-img-4,
 .bg-img-5 {
   position: absolute;
   object-fit: contain;
 }
 
-.bg-img-1  {
-  bottom: 120px;
+.bg-img-1 {
+  bottom: 45px;
   left: -35px;
+  transform: translateX(10%);
   width: 5.08688rem;
   height: 10.15206rem;
 }
 
 .bg-img-2 {
-  bottom: 35px;
-  right: -20px;
+  bottom: -20px;
+  right: 5px;
+  transform: translateX(20%);
   width: 5.375rem;
   height: 11.5rem;
 }
@@ -254,7 +251,7 @@ img {
   background-color: var(--orange-clr);
   text-align: center;
   color: var(--white-clr);
-  margin-top: 1rem;
+  margin-top: 6rem;
 }
 
 .about__section-container,
@@ -266,7 +263,7 @@ img {
 
 .bg-img-5 {
   top: -95px;
-  left: 25%;
+  transform: translateX(-50%);
   width: 16.36263rem;
   height: 9.85275rem;
 }
@@ -333,6 +330,10 @@ img {
   overflow-y: hidden;
 }
 
+.services__card:hover {
+  outline: var(--orange-clr) auto 2px;
+}
+
 .services__card-title {
   font-size: 2rem;
   font-weight: 700;
@@ -343,7 +344,8 @@ img {
 .services__card-img {
   width: 90%;
   object-fit: contain;
-  margin-bottom: -50px;
+  margin-bottom: -55px;
+  z-index: 1;
 }
 
 .template__section-subtitle {
@@ -354,19 +356,20 @@ img {
 
 .btn__catalog {
   display: flex;
-  gap: 30px;
+  gap: 30px 35px;
   flex-wrap: wrap;
   width: 100%;
   margin: 5px auto 2rem;
 }
 
 .template__btn {
-  width: 200px;
+  width: 150px;
+  height: 35px;
   border: 1px solid var(--gray-clr);
-  border-radius: 8px;
-  padding: 10px 15px;
-  font-weight: 700;
-  font-size: 1.2rem;
+  border-radius: 5px;
+  font-weight: 600;
+  font-size: 1rem;
+  text-align: center;
 }
 
 .templates__cards {
@@ -532,4 +535,237 @@ footer {
 
 .footer__container p {
   font-size: 18px;
+}
+
+@media screen and (min-width: 900px) {
+  .header__container{
+    height: 100%;
+    overflow: hidden;
+    padding-top: 1rem;
+  }
+  header {
+    height: 866px;
+    z-index: 1;
+    border-radius: 0 0 15px 15px;
+  }
+
+  .bg-img-1 {
+    width: 250px;
+    height: 498.93px;
+  }
+
+  .bg-img-2 {
+    width: 225px;
+    height: 483.94px;
+    right: 2px;
+    transform: translate(2%, -25%);
+  }
+
+  .bg-img-3 {
+    width: 174.57px;
+    height: 347.38px;
+    right: 20px;
+    bottom: 100px;
+    transform: translate(-70%, 15%);
+  }
+
+  .bg-img-4 {
+    width: 272.55px;
+    height: 539.48px;
+    top: 0;
+    left: 180px;
+    transform: translate(100%, -30%);
+  }
+
+  .bg-img-5 {
+    width: 525px;
+    height: 316.13px;
+    transform: translate(-50%, -35%);
+    z-index: 1000;
+  }
+
+  .hero__section {
+    height: 100%;
+    padding-top: 8rem;
+  }
+
+  .hero__section .subtitle {
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 30px;
+  }
+
+  .hero__section .title {
+    font-size: 84px;
+    font-weight: 700;
+    line-height: 105px;
+    margin-bottom: -10px;
+  }
+
+  .hero__section .btn__text .text {
+    width: 100%;
+    font-size: 18px;
+    line-height: 22.5px;
+    font-weight: 400;
+    margin-bottom: 10px;
+  }
+
+  .hero__section .btn__text .cta-btn {
+    margin-top: 30px;
+  }
+
+  .menu__icons {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+  }
+
+  .nav__menu {
+    gap: 20px;
+    margin-right: 10px;
+    margin-top: 30px;
+  }
+
+  .nav__item {
+    font-size: 14px;
+  }
+
+  .about__section {
+    margin-top: -10px;
+    padding-bottom: 1rem;
+  }
+
+  .about__section-container {
+    padding-top: 4rem;
+    position: relative;
+  }
+
+  .first,
+  .second {
+    position: absolute;
+  }
+
+  .first {
+    width: 90.05px;
+    height: 150.71px;
+    top: 50%;
+    left: 10px;
+  }
+
+  .second {
+    width: 180.86px;
+    height: 153.89px;
+    top: 80%;
+    right: 20px;
+    transform: translate(55%, -170%);
+  }
+
+  .section__title {
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 45px;
+  }
+
+  .about__section-text {
+    font-size: 18px;
+    line-height: 27px;
+    width: 850px;
+    font-weight: 400;
+    margin-bottom: 1.5rem;
+  }
+
+  .services__cards {
+    flex-direction: row;
+    justify-content: center;
+    gap: 30px;
+  }
+
+  .services__card {
+    padding-top: 0;
+    justify-content: center;
+    width: 400px;
+    height: 275px;
+    flex-direction: row;
+    position: relative;
+    overflow: hidden;
+  }
+
+  .services__card .services__card-title {
+    position: absolute;
+    z-index: 1000;
+    top: 25%;
+    text-align: center;
+    color: var(--white-clr);
+    font-size: 32px;
+    line-height: 40px;
+  }
+
+  .services__card .services__card-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    margin-bottom: 0;
+  }
+
+  .services__card:hover {
+    outline: none;
+  }
+
+  .services__card:hover .services__card-img {
+    scale: 1.03;
+  }
+
+  .btn__catalog {
+    column-gap: 68px;
+    margin-inline: auto;
+  }
+
+  .template__btn {
+    width: 150px;
+    height: 36px;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 20px;
+  }
+
+  .templates__cards {
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: 50px;
+    justify-content: center;
+  }
+
+  .templates__card {
+    width: 380px;
+    height: 315px;
+  }
+
+  .template__info h5 {
+    font-size: 16px;
+    line-height: 27px;
+  }
+
+  .action__btns .btn {
+    font-size: 14px;
+  }
+
+  .footer__container {
+    grid-template-areas: 'logo faq termsPrivacy footerNav'
+                         'hr hr hr hr'
+                         'copy copy socials socials';
+    align-items: start;
+    padding-bottom: .2rem;
+  }
+
+  footer p {
+    grid-area: copy;
+    margin-top: 10px;
+    font-size: 14px;
+    font-weight: 400;
+  }
+
+  footer .social__icons {
+    margin-top: 10px;
+    font-size: 14px;
+  }
 }
